# MCP-Server-for-Hashing

./: Dockerfile  README.md  build_and_push.sh  hashing_utility.py  main.py  pyproject.toml  understanding-model-context-protocol.md
docs/: mcp-drawings.excalidraw
src/hashing_mcp/: __init__.py  __main__.py  server.py
src/mcp-server-hashing/: hashing_utility.py
test/: test_hashing_server.py
