[project]
name = "mcp-server-hashing"
version = "0.1.0"
description = "An MCP Server offering tools to calculate MD5 and SHA-256 cryptographic hashes for text data, designed for use with LLMs."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kunal Pathak", email = "contact@kunal-pathak.com" },
]
keywords = ["hashing", "mcp", "llm"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp[cli]>=1.6.0",
]

[project.scripts]
mcp-server-hashing = "mcp_server_hashing:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "freezegun>=1.5.1",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]
